--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="./style.css">
@@ -10,81 +11,90 @@
     <section class="background">
         <div class="container">
             <header class="header">
-                <div>
-                    <a href="">
-                        BrandName
-                    </a>
-                </div>
-                <nav>
-                    <!-- ul>li*4>a + tab -->
-                    <ul class="header__ul">
-                        <li class="header__li"><a href="">Home</a></li>
-                        <li class="header__li"><a href="">Product</a></li>
-                        <li class="header__li"><a href="">Pricing</a></li>
-                        <li class="header__li"><a href="">Contact</a></li>
-                    </ul>
-                </nav>
+<div>
+    <a href="">
+        BrandName
+    </a>
+</div>
+<nav> 
+    <!-- <ul><li><a href=""></a></li> -->
+     <ul class="header__ul">
+       <li class="header__li"><a href="">Home</a></li>
+       <li class="header__li"><a href="">Product</a></li>
+       <li class="header__li"><a href="">Pricing</a></li>
+       <li class="header__li"><a href="">Contact</a></li>
+    </ul>
+</nav>
             </header>
             <div>
-                <h1 class="title">
-                    We Ensure A Best Insurance Service
-                </h1>
-                <p class="text">
-                    We know how large objects will act, but things on a small scale.
-                </p>
-                <form>
-                    <input class="input" placeholder="Email" type="email">
-                    <button class="button">
-                        Get Now
-                    </button>
-                </form>
-            </div>
+<h1 class="title">
+    We Ensure A Best Insurance Service
+</h1>
+<p class="text">
+    We know how large objects will act, but things on a small scale.
+</p>
+    <form>
+        <input class="input"placeholder="Email" type="email">
+        <button class="button">
+            Get Quote Now
+        </button>
+    </form>
         </div>
+    </div> 
     </section>
-    <section class="industry">
-        <div class="gallery">
-            <!-- .gallery__item*4>img -->
-            <div class="gallery__item">
-                <img src="./img/media bg-cover.png" alt="">
-                <div class="gallery__item-abs">
-                    <p class="gallery__text">
-                        Life Tips From Top Ten Adventure Travelers
-                    <button class="gallery__button">
-                        View Project
-                    </button>
-                </div>
-            </div>
-            <div class="gallery__item">
-                <img src="./img/post-2.png" alt="">
-                <div class="gallery__item-abs">
-                    <p class="gallery__text">
-                        Life Tips From Top Ten Adventure Travelers
-                    <button class="gallery__button">
-                        View Project
-                    </button>
-                </div>
-            </div>
-            <div class="gallery__item">
-                <img src="./img/post-3.png" alt="">
-                <div class="gallery__item-abs">
-                    <p class="gallery__text">
-                        Life Tips From Top Ten   Adventure Travelers
-                    <button class="gallery__button">
-                        View Project
-                    </button>
-                </div>
-            </div>
-            <div class="gallery__item">
-                <img src="./img/post-4.png" alt="">
-                <div class="gallery__item-abs">
-                    <p class="gallery__text">
-                        Life Tips From Top Ten  Adventure Travelers
-                    <button class="gallery__button">
-                        View Project
-                    </button>
-                </div>
-            </div>
+ <section class="industry">
+    <section class="container">
+       <div class="container__about">
+<h1 class="container__title">
+    Industry
+</h1>
+<p class="container__text">
+    Problems trying to resolve the conflict between the two major realms of Classical physics: Newtonian mechanics 
+</p>
+       </div> 
+    </section>
+  <div class="gallery">
+       <div class="gallery__item">
+         <img src="./media bg-cover.png" alt="">
+        <div class="gallery__item-abs">
+        <p class="gallery__text">
+            Life Tips From Top Ten Adventure Travelers
+        <button class="gallery__button">
+            View Project
+        </button>
+     </div>
+    </div>
+     <div class="gallery__item ">
+        <img src="./post-2.png" alt="">
+        <div class="gallery__item-abs">
+            <p class="gallery__text">
+                Life Tips From Top Ten Adventure Travelers
+            <button class="gallery__button">
+                View Project
+            </button>
         </div>
-    </section>
+    </div>
+       <div class="gallery__item">
+    <img src="./post-3.png" alt="">
+    <div class="gallery__item-abs">
+        <p class="gallery__text">
+            Life Tips From Top Ten   Adventure Travelers
+        <button class="gallery__button">
+            View Project
+        </button>
+    </div>
+</div>
+ <div class="gallery__item">
+    <img src="./post-4.png" alt="">
+    <div class="gallery__item-abs">
+        <p class="gallery__text">
+            Life Tips From Top Ten  Adventure Travelers
+        <button class="gallery__button">
+            View Project
+        </button>
+    </div>
+</div>
+</div>
+   </section> 
 </body>
 </html>
